Fix module imports
